2001-03-27  Richard Henderson  <rth@redhat.com>

	* bb-reorder.c, dwarf2out.c, except.c, except.h, flow.c,
	jump.c, toplev.c:
	Rename asynchronous_exceptions to flag_non_call_exceptions.

2001-03-27  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* configure.in: Don't check for bcopy.
	* configure, config.in: Regenerate.

	* system.h: Don't define or prototype bcopy, instead poison it.

2001-03-27  Richard Henderson  <rth@redhat.com>

	* function.c (expand_function_start): Set DECL_REGISTER on
	a pseudo used for DECL_RESULT.

	* rtl.h (LCT_NORETURN): New.
	* calls.c (emit_library_call_value_1): Handle it.

2001-03-27  Stan Shebs  <shebs@apple.com>

	* objc/objc-act.c (objc_init): Use dump_base_name.
	(gen_declaration): Clear the buffer arg.
	(gen_declaration_1): New function, body of gen_declaration.
	(adorn_decl): Call gen_declaration_1 instead of gen_declaration.
	(gen_method_decl): Ditto, plus always clear buffer arg.
	(error_with_ivar): Simplify.
	(warn_with_method): Ditto.
	(build_message_expr): Don't clear buffers.
	(dump_interface): Ditto.
	(objc_debug): Ditto.
	(build_keyword_selector): Clear the buffer by only zeroing
	the first element.
	(objc_implementation_context): Declare.
	(start_class): Warn about missing @end.
	(finish_objc): Ditto.

2001-03-28  John David Anglin  <dave@hiauly1.hia.nrc.ca>

	* reload1.c (eliminate_regs): Don't abort on MEM USEs.

2001-03-27  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* Makefile.in (SYSTEM_H): Define.
	Depend on $(SYSTEM_H), not system.h.

	* objc/Make-lang.in: Depend on $(SYSTEM_H), not system.h.

2001-03-27  Jim Wilson  <wilson@redhat.com>

	* final.c (final_scan_insn, case NOTE_INSN_BASIC_BLOCK): Call
	IA64_UNWIND_EMIT.
	* config/ia64/ia64.c (block_num, need_copy_state): New static vars.
	(process_epilogue): New static function.
	(process_set): Call process_epilogue instead of emitting .restore
	directly.
	(process_for_unwind_directive): Handle NOTE_INSN_BASIC_BLOCK.
